k8s/eventflex-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventflex-web
spec:
  type: NodePort
  selector:
    app: eventflex-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32000  # a port in the range 30000-32767
