k8s/eventflex-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventflex-web-ingress
spec:
  ingressClassName: contour
  rules:
  - host: eventflex.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eventflex-web
            port:
              number: 3000
